# confar

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  install.sh  new.py  publish-ref.md  requirements.txt  sample.yml  setup.cfg
docs/: Install  about.md  index.md  usage.md
examples/: confar.yml  sample.yml
src/confar/: __init__.py  aggregate.py  cli.py  runner.py
src/confar/utils/: Map.py  __init__.py
src/confar/utils/Emitter/: __init__.py
src/confar/utils/parser/: __init__.py  json.py  yaml.py
src/confar/utils/renderer/: __init__.py
src/confar/utils/renderer/templates/: flow.html
src/confar/utils/task/: __init__.py  shell.py
tests/: aggregate_test.py  render_result.py
