[metadata]
name = confar
version = 1.1.4
author = sanjai Rocky
author_email = talk2sanjai@gmail.com
description = Confar is a Python CLI and library for configuration management, designed to aggregate and manage configuration data and execute tasks based on that configuration.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/sanjairocky/confar
project_urls =
    Bug Tracker = https://github.com/sanjairocky/confar/issues
    repository = https://github.com/sanjairocky/confar
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    confar = confar.cli:app

[options.packages.find]
where = src